修改Twitter修改为X

--- a/app/views/settings/profile.html.erb
+++ b/app/views/settings/profile.html.erb
@@ -31,7 +31,7 @@
             <div class="form-group">
               <%= f.label :twitter %>
               <div class="input-group">
-                <span class="input-group-text">https://twitter.com/</span>
+                <span class="input-group-text">https://x.com/</span>
                 <%= f.text_field :twitter, class: "form-control" %>
               </div>
             </div>
