--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -52,7 +52,7 @@
         </div>
         <div class="item social">
           <% if !@user.twitter.blank? %>
-            <%= link_to icon_bold_tag("twitter"), @user.twitter_url, class: "twitter", rel: "nofollow" %>
+            <%= link_to icon_bold_tag("x-twitter"), @user.twitter_url, class: "twitter", rel: "nofollow" %>
           <% end %>
           <% if Setting.has_module? :github %>
             <% if !@user.github.blank? %>
