--- a/app/components/profile_card_component.html.erb
+++ b/app/components/profile_card_component.html.erb
@@ -23,7 +23,7 @@
   <hr>
   <div class="item social">
     <% if !user.twitter.blank? %>
-      <%= link_to icon_bold_tag("twitter"), user.twitter_url, class: "twitter", rel: "nofollow" %>
+      <%= link_to icon_bold_tag("x-twitter"), user.twitter_url, class: "twitter", rel: "nofollow" %>
     <% end %>
     <% if Setting.has_module? :github %>
       <% if !user.github.blank? %>
