--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
 <ul id="main-nav-menu" class="navbar-nav my-0 flex flex-md-row list-none flex-col md:flex-row">
   <%= render_list_items do |li|
     li << link_to(t("menu.topics"), main_app.root_path, class: "nav-link")
-    li << link_to("问答", "/topics/node10")
-    li << link_to("曝光", "/topics/node14")
+    li << link_to("问答", "/topics/node10", class: "nav-link")
+    li << link_to("曝光", "/topics/node14", class: "nav-link")
 
     Homeland.navbar_plugins.each do |plugin|
       li << link_to(plugin.display_name, plugin.root_path, class: "nav-link")
