导航栏样式布局调整

--- a/app/javascript/front/index.scss
+++ b/app/javascript/front/index.scss
@@ -224,7 +224,7 @@ hr {
         &.all-nodes {
           border-radius: 3px;
           outline: 0 !important;
-          margin-right: 1.25rem;
+          // margin-right: 1.25rem;
           background: var(--gray);
           border: 0;
 
