--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,7 @@
 <!--
-   _   _                      _                 _
-  | | | |                    | |               | |
-  | |_| | ___  _ __ ___   ___| | __ _ _ __   __| |
-  |  _  |/ _ \| '_ ` _ \ / _ \ |/ _` | '_ \ / _` |
-  | | | | (_) | | | | | |  __/ | (_| | | | | (_| |
-  \_| |_/\___/|_| |_| |_|\___|_|\__,_|_| |_|\__,_|
-  ------------------------------------------------
-            https://github.com/ruby-china/homeland
-
   - Ruby:  <%= RUBY_VERSION %><%= "-p#{RUBY_PATCHLEVEL}" if defined? RUBY_PATCHLEVEL %>
   - Rails: <%= Rails.version %>
-  - Homeland: <%= Homeland.version %>
+  - Build Version: <%= Homeland.version %>
 -->
 <!DOCTYPE html>
 <html>
