fix @sections is null

--- a/app/views/shared/_index_sections.html.erb
+++ b/app/views/shared/_index_sections.html.erb
@@ -1,10 +1,10 @@
-@sections = [{
+<% @sections = [{
   name: "讨论",
   nodes: [{ name: "闲聊", id: 12 }, { name: "新闻", id: 3 }]
 }, {
   name: "生活",
   nodes: [{ name: "情感", id: 1 }, { name: "问答", id: 2 }]
-}]
+}] %>
 <div class="index-sections card">
   <div class="card-body">
     <div class="row node-list">
