--- a/app/views/topics/_ban.html.erb
+++ b/app/views/topics/_ban.html.erb
@@ -1,5 +1,5 @@
 <div class="modal" id="ban-modal" data-bs-backdrop="static">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <%= form_for('', url: action_topic_path(topic, type: "ban"), method: "POST", remote: true) do |f| %>
         <div class="modal-header">
