--- a/app/views/topics/_node_selector.html.erb
+++ b/app/views/topics/_node_selector.html.erb
@@ -1,8 +1,8 @@
-<div class="modal fade in" id="node-selector" tabindex="-1" role="dialog">
-  <div class="modal-dialog modal-lg" role="document">
+<div class="modal fade" id="node-selector" aria-labelledby="nodeSelectorModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <div class="modal-title">话题节点</div>
+        <div class="modal-title" id="nodeSelectorModalLabel">话题节点</div>
         <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
