--- a/app/views/settings/profile.html.erb
+++ b/app/views/settings/profile.html.erb
@@ -36,6 +36,15 @@
               </div>
             </div>
           <% end %>
+          <% if Setting.has_profile_field? :telegram %>
+            <div class="form-group">
+              <label class="form-label" for="user_telegram">Telegram</label>
+              <div class="input-group">
+                <span class="input-group-text">@</span>
+                <%= f.text_field :telegram, class: "form-control", placeholder: "Telegram用户名" %>
+              </div>
+            </div>
+          <% end %>
           <% if Setting.has_profile_field? :website %>
             <div class="form-group">
               <%= f.label :website %>
