--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -30,6 +30,12 @@
       <%= f.text_field :twitter, class: "form-control" %>
     </div>
   <% end %>
+  <% if Setting.has_profile_field? :telegram %>
+    <div class="form-group">
+      <%= f.label :telegram %>
+      <%= f.text_field :telegram, class: "form-control" %>
+    </div>
+  <% end %>
   <div class="form-group form-check">
     <%= f.check_box :email_public, class: "form-check-input" %>
     <%= f.label :email_public, class: "form-check-label" %>
