--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -5,7 +5,7 @@
         <% @user.contacts.each_key do |field| %>
           <% next if @user.profile_field(field).blank? %>
           <div class="field">
-            <label><%= Profile.contact_field_label(field) %></label>
+            <label style="width: 50px;"><%= Profile.contact_field_label(field) %>:</label>
             <span class="value"><%= @user.full_profile_field(field) %></span>
           </div>
         <% end %>
