外部链接修改为新窗口打开

--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -52,10 +52,10 @@
         </div>
         <div class="item social">
           <% if !@user.twitter.blank? %>
-            <%= link_to icon_bold_tag("x-twitter"), @user.twitter_url, class: "twitter", rel: "nofollow" %>
+            <%= link_to icon_bold_tag("x-twitter"), @user.twitter_url, target: '_blank', class: "twitter", rel: "nofollow" %>
           <% end %>
           <% if !@user.telegram.blank? %>
-            <%= link_to icon_bold_tag("telegram"), "https://t.me/#{@user.telegram}", class: "twitter", rel: "nofollow" %>
+            <%= link_to icon_bold_tag("telegram"), "https://t.me/#{@user.telegram}", target: '_blank', class: "twitter", rel: "nofollow" %>
           <% end %>
           <% if Setting.has_module? :github %>
             <% if !@user.github.blank? %>
