--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -19,7 +19,7 @@
         <% if !@user.twitter.blank? %>
           <div class="field">
             <label style="width: 70px;">X:</label>
-            <span class="value"><%= link_to "@#{@user.twitter_url}", @user.twitter_url, target: '_blank', class: "twitter", rel: "nofollow" %></span>
+            <span class="value"><%= link_to "@#{@user.twitter}", @user.twitter_url, target: '_blank', class: "twitter", rel: "nofollow" %></span>
           </div>
         <% end %>
       </div>
