--- a/app/views/admin/nodes/_form.html.erb
+++ b/app/views/admin/nodes/_form.html.erb
@@ -12,9 +12,8 @@
     <%= f.label :summary %>
     <%= f.text_area :summary, class: "form-control" %>
   </div>
-  <label class="form-label" for="node_admin_only">发布权限</label>
+  <label class="form-label" for="node_admin_only">帖子发布权限</label>
   <div class="form-group form-check">
-    # 设置check状态的值为admin_only
     <%= f.check_box :admin_only, class: "form-check-input" %> 
     <%= f.label :admin_only, class: "form-check-label" %>
   </div>
