--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,20 +1,19 @@
-<% title_tag 'Resend confirmation instructions' %>
+<% title_tag '重新发送注册激活邮件' %>
 
 <div class="flex justify-center">
   <div class="w-full sm:w-2/3 md:w-1/2">
     <div class="card card-lg">
       <div class="card-body">
-        <div class="card-title">Resend confirmation instructions</div>
+        <div class="card-title">重新发送注册激活邮件</div>
         <%= form_for resource, as: resource_name, url: confirmation_path(resource_name), method: :post do |f| %>
         <%= render "shared/error_messages", target: resource %>
 
         <div class="form-group">
-            <%= f.label :email %>
-            <%= f.text_field :email, class: "form-control" %>
+            <%= f.text_field :email, class: "form-control",placeholder:"注册邮箱地址" %>
         </div>
 
         <div class="form-actions">
-            <%= f.submit "Resend confirmation instructions" %>
+            <%= f.submit "重新发送激活邮件" class: "btn btn-primary btn-lg btn-block" %>
         </div>
         <% end %>
       </div>
