前端发帖权限校验

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,4 @@
-<% title_tag '重新发送注册激活邮件' %>
+<% title_tag 'Resend confirmation instructions' %>
 
 <div class="flex justify-center">
   <div class="w-full sm:w-2/3 md:w-1/2">
