--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,4 @@
-<% title_tag 'Resend confirmation instructions' %>
+<% title_tag '重新发送注册激活邮件' %>
 
 <div class="flex justify-center">
   <div class="w-full sm:w-2/3 md:w-1/2">
@@ -13,7 +13,7 @@
         </div>
 
         <div class="form-actions">
-            <%= f.submit "重新发送激活邮件" class: "btn btn-primary btn-lg btn-block" %>
+            <%= f.submit "重新发送激活邮件", class: "btn btn-primary btn-lg btn-block" %>
         </div>
         <% end %>
       </div>
