--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -9,7 +9,7 @@
         <%= render "shared/error_messages", target: resource %>
 
         <div class="form-group">
-            <%= f.text_field :email, class: "form-control",placeholder:"注册邮箱地址" %>
+            <%= f.text_field :email, class: "form-control form-control-lg",placeholder:"注册邮箱地址" %>
         </div>
 
         <div class="form-actions">
