--- a/app/views/topics/_node_info.html.erb
+++ b/app/views/topics/_node_info.html.erb
@@ -1,6 +1,6 @@
 <% content_for :sub_navbar do %>
   <div class="sub-navbar node-header <%= "node-header-with-node" if node %> hide-ios">
-    <div class="container px-3 py-4 mx-auto md:px-4 md:py-2">
+    <div class="container px-3 py-2 mx-auto md:px-4">
       <% if !node.blank? %>
         <div class="title">
           <%= node.name %>
