--- a/app/components/topic_component.html.erb
+++ b/app/components/topic_component.html.erb
@@ -17,10 +17,10 @@
         <%= user_name_tag(topic.user) %>
         <span class="hidden-mobile">
           •
-          <% if topic.last_reply_user_login.blank? %>
+          <% if topic.last_reply_user.blank? %>
             <%= raw t("common.created_at", time: timeago(topic.created_at))%>
           <% else %>
-            <%= t("common.last_by")%> <%= user_name_tag(topic.last_reply_user_login) %> <%= raw t("common.reply_at", time: timeago(topic.replied_at))%>
+            <%= t("common.last_by")%> <%= user_name_tag(topic.last_reply_user) %> <%= raw t("common.reply_at", time: timeago(topic.replied_at))%>
           <% end %>
         </span>
       </div>
